Improvements to MDA tool. Made so Chi2 chart and results text are displayed to the right of the spectrum chart instead of bellow; seems to be better than displaying the chart/results bellow the spectrum, but currently results not fixed-with, and that should be fixed. Fixed some Chi2 chart layout issues (still needs more work, maybe just use D3). Made so calculations in MDA tool are only done at most once per render (calc is done if marked that it needs to be done during the Wt render loop). Made it so calculations are updated when nuclide input changes, and the nuclide actually changed. Switched to using function minimum finders and root finders from boost to fund best chi2 and limits for display and confidence limits, instead of janky home-spun code. Fix so Chi2 calc is updated when checkbox for using a peak is changed. Fix bug where PhysicalUnits::bestDoseUnitHtml was using sm_activityUnitNameValues instead of  sm_doseRateUnitHtmlNameValues.

--- a/InterSpec_resources/DetectionConfidenceTool.css
+++ b/InterSpec_resources/DetectionConfidenceTool.css
@@ -49,9 +49,14 @@
 
 .MdaResults
 {
-  margin-top: 5px;
-  margin-bottom: 8px;
-  padding: 7px;
-  padding-top: 5px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding: 0px;
+  padding-top: 0px;
   border: 1px solid #d1d1d1;
+}
+
+.MdaResultTxt
+{
+  white-space: nowrap;
 }
